// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AppComponent should not render <app-nav-item> when there is no item provided 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should not render sign out button if it is not provided in the vm 1`] = `
<div
  id="root11"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <!--container-->
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should not render the <app-header> when the headerCanBeShown$ value is false 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should not render the template when the VM is not provided 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
</div>
`;

exports[`AppComponent should render <app-nav-item> and <a> with routerLink in order when both of them are provided 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="/"
            >
              0title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               1title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#partners"
              rel="noopener,noreferrer"
              target="_self"
            >
               2title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               3title 
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render 1 <a> with routerLink when 1 item is provided 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="/"
            >
              0title
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render 1 <app-nav-item> when 1 item is provided 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               0title 
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render 5 <a> with routerLink in order when 5 items are provided 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="/"
            >
              0title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="/"
            >
              1title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="/"
            >
              2title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="/"
            >
              3title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="/"
            >
              4title
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render 5 <app-nav-item> in order when 5 items are provided 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               0title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               1title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               2title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               3title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               4title 
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render sign out button if it is provided in the vm 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render the <app-header> when the headerCanBeShown$ value is true 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="/"
            >
              0title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               1title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#partners"
              rel="noopener,noreferrer"
              target="_self"
            >
               2title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               3title 
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;

exports[`AppComponent should render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="pt-4 sm:px-20 lg:px-40 w-full flex flex-col justify-between items-center md:flex-row transition-all absolute"
      >
        <app-logo
          class="cursor-pointer"
          tabindex="0"
        >
          <img
            alt="logo"
            class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
            src="assets/phoenix.jpg"
          />
        </app-logo>
        <app-nav>
          <nav
            class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
          >
            <a
              class="nav-item"
              href="/"
            >
              0title
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               1title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#partners"
              rel="noopener,noreferrer"
              target="_self"
            >
               2title 
            </a>
            <!--ng-container-->
            <a
              class="nav-item"
              href="#products"
              rel="noopener,noreferrer"
              target="_self"
            >
               3title 
            </a>
            <!--ng-container-->
            <!--container-->
            <app-button>
              <button
                class="btn flex flex-row justify-center btn-primary btn-text"
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
                <!--container-->
              </button>
            </app-button>
            <!--container-->
          </nav>
        </app-nav>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow mt-72 md:mt-25"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
  <!--container-->
  <!--container-->
  <!--container-->
</div>
`;
